tests/invalid/repr_unsupported_type/main.py
def run_case() -> None:
    x: str = repr()

if __name__ == "__main__":
    run_case()
